Remove font-display swap (✅issue fixed >>> Fonts jump)

--- a/src/scss/global/_fonts.scss
+++ b/src/scss/global/_fonts.scss
@@ -10,7 +10,7 @@
         url('/src/fonts/MonumentExtended-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    // font-display: swap;
 }
 
 @font-face {
@@ -23,7 +23,7 @@
         url('/src/fonts/SuisseIntl-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    // font-display: swap;
 }
 
 @font-face {
@@ -36,5 +36,5 @@
         url('/src/fonts/Canela-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    // font-display: swap;
 }
